<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:src="@drawable/avatar"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/progress"
                android:layout_margin="5dp"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/red"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/welcome"
                android:textColor="@color/dark"
                android:textSize="30sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/dark"
                android:hint="@string/username"
                android:padding="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/username"
                    android:drawableTint="@color/dark"
                    android:background="@drawable/line"
                    android:drawablePadding="10dp"
                    android:inputType="textPersonName"
                    android:fontFamily="sans-serif"
                    android:id="@+id/username"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/dark"
                android:hint="@string/email"
                android:padding="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawableTint="@color/dark"
                    android:background="@drawable/line"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:fontFamily="sans-serif"
                    android:id="@+id/email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/dark"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/dark"
                android:padding="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/dark"
                    android:textColorHint="@color/red"
                    android:background="@drawable/line"
                    android:inputType="textPassword"
                    android:fontFamily="sans-serif"
                    android:id="@+id/password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/dark"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/dark"
                android:padding="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/dark"
                    android:textColorHint="@color/red"
                    android:background="@drawable/line"
                    android:inputType="textPassword"
                    android:fontFamily="sans-serif"
                    android:id="@+id/confirm_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:id="@+id/login"
                android:textAllCaps="true"/>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:text="Already Have an Account?"/>
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textColor="@color/red"/>
    </LinearLayout>

</LinearLayout>